tests/NormalTests/paczka1/small_fuzzy/57733977.err
Error in line 4: j9O A334 22,9
Error in line 13: SBL654TN A334 59,9
